recursion.cons.lessons.recursion.cons.Nlast.scala.error
nlast:1: error: type mismatch;
 found   : Unit
 required: List[Int]
def nlast(l:List[Int], n:Int): List[Int] = {
                                           ^